--- a/BookStoreApp.Blazor.Server.UI/Shared/NavMenu.razor
+++ b/BookStoreApp.Blazor.Server.UI/Shared/NavMenu.razor
@@ -27,6 +27,12 @@
                         <span class="oi oi-plus" aria-hidden="true"></span> Authors
                     </NavLink>
                 </div>
+                <hr/>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="books/">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Books
+                    </NavLink>
+                </div>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
