--- a/BookStoreApp.Blazor.Server.UI/Pages/Authors/Create.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Authors/Create.razor
@@ -30,7 +30,7 @@
         <span class="oi oi-pencil"></span>
         Create Author
     </button>
-    <button @onclick="BackToList" class="btn btn-outline-secondary">
+    <button @onclick="BackToList" class="btn btn-outline-secondary" type="button">
         Back To List
     </button>
 </EditForm>
