--- a/BookStoreApp.Blazor.Server.UI/Pages/Books/Update.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Books/Update.razor
@@ -1,63 +1,69 @@
-﻿@page "/books/create/"
+﻿@page "/books/update/{id:int}"
 @attribute [Authorize(Roles = Roles.Admin)]
 @inject IBookService bookService;
 @inject IAuthorService authorService;
 @inject NavigationManager navManager;
 
-<h3>Create Book</h3>
+<h3>Edit Book</h3>
 
-
-<EditForm Model="Book" OnValidSubmit="HandleCreate">
+<EditForm Model="Book" OnValidSubmit="HandleUpdate">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <div class="form-group">
         <label for="title">Book Title</label>
         <InputText @bind-Value="Book.Title" class="form-control" id="title" />
+        <ValidationMessage For="@(() => Book.Title)" />
     </div>
     <br />
     <div class="form-group">
         <label for="isbn">ISBN</label>
         <InputText @bind-Value="Book.Isbn" class="form-control" id="isbn" />
+        <ValidationMessage For="@(() => Book.Isbn)" />
     </div>
     <br />
     <div class="form-group">
         <label for="price">Price</label>
         <InputNumber @bind-Value="Book.Price" class="form-control" id="price" />
+        <ValidationMessage For="@(() => Book.Price)" />
     </div>
     <br />
     <div class="form-group">
         <label for="year">Year</label>
         <InputNumber @bind-Value="Book.Year" class="form-control" id="year" />
+        <ValidationMessage For="@(() => Book.Year)" />
     </div>
     <br />
     <div class="form-group">
         <label for="summary">Summary</label>
         <InputTextArea @bind-Value="Book.Summary" class="form-control" id="summary" />
+
+        <ValidationMessage For="@(() => Book.Summary)" />
     </div>
     <br />
     <div class="form-group">
         <label for="author">Authors</label>
         <InputSelect @bind-Value="Book.AuthorId" class="form-select" id="author">
             <option value="">-- Select Author --</option>
-            @foreach(var author in Authors)
+            @foreach (var author in Authors)
             {
                 <option value="@author.Id">@author.FirstName @author.LastName</option>
             }
         </InputSelect>
+  <ValidationMessage For="@(() => Book.AuthorId)" />
     </div>
     <br />
     <div class="form-group">
         <label for="bookcover">Book Cover Photo</label>
         <div>
-        <InputFile OnChange="HandleFileSelection" id="bookcover" />
+            <InputFile OnChange="HandleFileSelection" id="bookcover" />
             <img src="@img" width="100" height="100" class="img-thumbnail" alt="Book cover image" />
             <p class="text-danger">@UploadFileWarning</p>
         </div>
     </div>
     <br />
-    <button class="btn btn-primary" type="submit">
+    <button class="btn btn-primary" type="submit" @onclick="HandleUpdate">
         <span class="oi oi-pencil"></span>
-        Create Book
+        Update Book
     </button>
     <button @onclick="BackToList" class="btn btn-outline-secondary" type="button">
         <span class="oi oi-media-skip-backward"></span>
@@ -67,52 +73,74 @@
 
 
 @code {
-    private BookCreateDto Book = new BookCreateDto();
+    [Parameter]
+    public int Id { get; set; }
+
+    private BookUpdateDto Book = new BookUpdateDto();
     private List<AuthorReadOnlyDto> Authors = new();
+
     private string UploadFileWarning = string.Empty;
     private string img = string.Empty;
+    private long maxFileSize = 1024 * 1024 * 5;
 
 
     protected override async Task OnInitializedAsync()
     {
-        var response = await authorService.Get();
+        var bookResponse = await bookService.GetForUpdate(Id);
 
-        if(response.Success)
+        if (bookResponse.Success)
         {
-            Authors = response.Data;
+            Book = bookResponse.Data;
+            img = Book.Image;
+        }
+
+        var authorResponse = await bookService.GetForUpdate(Id);
+
+        if (authorResponse.Success)
+        {
+            Book = authorResponse.Data;
         }
     }
 
-    private async Task HandleCreate()
-    {
-        var response = await bookService.Create(Book);
-        if (response.Success)
-        {
-            BackToList();
-        }
-    }
 
     private async Task HandleFileSelection(InputFileChangeEventArgs e)
     {
         var file = e.File;
-        if(file != null)
+        if (file != null)
         {
-            var ext = System.IO.Path.GetExtension(file.Name);
-            if (ext.ToLower().Contains("jpg") || ext.ToLower().Contains("png") || ext.ToLower().Contains("jpeg"))
+            if (file.Size > maxFileSize)
             {
-                var byteArray = new byte[file.Size];
-                await file.OpenReadStream().ReadAsync(byteArray);
-                string imageType = file.ContentType;
-                string base64String = Convert.ToBase64String(byteArray);
+                UploadFileWarning = "This file is too big for upload.";
+                return;
+            }
 
-                Book.ImageData = base64String;
-                Book.OriginalImageName = file.Name;
-                img = $"data:{imageType}; base64, {base64String}";
-            }
-            else{
+            var ext = System.IO.Path.GetExtension(file.Name);
+            if ((ext.ToLower().Contains("jpg") || ext.ToLower().Contains("png") || ext.ToLower().Contains("jpeg")) == false)
+            {
                 UploadFileWarning = "Please select a valid image file (*.jpg | *.png | *.jpeg)";
+                return;
             }
+
+            var byteArray = new byte[file.Size];
+            await file.OpenReadStream().ReadAsync(byteArray);
+            string imageType = file.ContentType;
+            string base64String = Convert.ToBase64String(byteArray);
+
+            Book.ImageData = base64String;
+            Book.OriginalImageName = file.Name;
+            img = $"data:{imageType}; base64, {base64String}";
         }
+    }
+
+    private async Task HandleUpdate()
+    {
+        var response = await bookService.Edit(Id, Book);
+
+        if (response.Success)
+        {
+            BackToList();
+        }
+
     }
 
     private void BackToList()
