--- a/BookStoreApp.Blazor.Server.UI/Pages/Books/Update.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Books/Update.razor
@@ -94,11 +94,11 @@
             img = Book.Image;
         }
 
-        var authorResponse = await bookService.GetForUpdate(Id);
+        var authorResponse = await authorService.Get();
 
         if (authorResponse.Success)
         {
-            Book = authorResponse.Data;
+            Authors = authorResponse.Data;
         }
     }
 
