--- a/BookStoreApp.Blazor.Server.UI/_Imports.razor
+++ b/BookStoreApp.Blazor.Server.UI/_Imports.razor
@@ -12,3 +12,4 @@
 @using BookStoreApp.Blazor.Server.UI.Services.Authentication
 @using BookStoreApp.Blazor.Server.UI.Services
 @using BookStoreApp.Blazor.Server.UI.Static
+@using BookStoreApp.Blazor.Server.UI.Models
